--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,57 @@
---- 
-abstract: ~
-author: 
-  - "{% ELSE %}"
-build_requires: 
-  Test::CompanionClasses: 0.03
-  Test::Compile: 0
-  Test::More: 0
-  UNIVERSAL::require: 0
-distribution_type: module
-generated_by: Module::Install version 0.68
+---
+abstract: 'Semantic data classes for net-related data'
+author:
+  - 'Marcel Gruenauer <marcel@cpan.org>'
+build_requires: {}
+configure_requires:
+  ExtUtils::MakeMaker: 6.11
+generated_by: 'Dist::Zilla version 1.100711'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Data-Semantic-Net
-no_index: 
-  directory: 
-    - inc
-    - t
-requires: 
+provides:
+  Data::Semantic::Net:
+    file: lib/Data/Semantic/Net.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress:
+    file: lib/Data/Semantic/Net/IPAddress.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress::IPv4:
+    file: lib/Data/Semantic/Net/IPAddress/IPv4.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress::IPv4_TEST:
+    file: lib/Data/Semantic/Net/IPAddress/IPv4_TEST.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress::IPv6:
+    file: lib/Data/Semantic/Net/IPAddress/IPv6.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress::IPv6_TEST:
+    file: lib/Data/Semantic/Net/IPAddress/IPv6_TEST.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress::TestData::IPv4:
+    file: lib/Data/Semantic/Net/IPAddress/TestData/IPv4.pm
+    version: 1.100850
+  Data::Semantic::Net::IPAddress::TestData::IPv6:
+    file: lib/Data/Semantic/Net/IPAddress/TestData/IPv6.pm
+    version: 1.100850
+requires:
+  Carp: 0
   Data::Semantic: 0
+  Data::Semantic::Test: 0
+  English: 0
+  File::Find: 0
+  File::Temp: 0
   Net::IP: 0
-  perl: 5.6.0
-version: 0.02
+  Scalar::Util: 0
+  Test::CompanionClasses: 0
+  Test::More: 0.88
+  constant: 0
+  parent: 0
+  perl: 5.008
+resources:
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Data-Semantic-Net
+  homepage: http://search.cpan.org/dist/Data-Semantic-Net/
+  repository: http://github.com/hanekomu/Data-Semantic-Net
+version: 1.100850
