--- a/META.yml
+++ b/META.yml
@@ -2,10 +2,18 @@
 abstract: 'Semantic data classes for net-related data'
 author:
   - 'Marcel Gruenauer <marcel@cpan.org>'
-build_requires: {}
+build_requires:
+  Carp: 0
+  English: 0
+  File::Find: 0
+  File::Temp: 0
+  Scalar::Util: 0
+  Test::CompanionClasses: 0
+  Test::More: 0.94
 configure_requires:
-  ExtUtils::MakeMaker: 6.11
-generated_by: 'Dist::Zilla version 1.100711'
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.101582, CPAN::Meta::Converter version 2.101591'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -14,39 +22,33 @@ name: Data-Semantic-Net
 provides:
   Data::Semantic::Net:
     file: lib/Data/Semantic/Net.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress:
     file: lib/Data/Semantic/Net/IPAddress.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress::IPv4:
     file: lib/Data/Semantic/Net/IPAddress/IPv4.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress::IPv4_TEST:
     file: lib/Data/Semantic/Net/IPAddress/IPv4_TEST.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress::IPv6:
     file: lib/Data/Semantic/Net/IPAddress/IPv6.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress::IPv6_TEST:
     file: lib/Data/Semantic/Net/IPAddress/IPv6_TEST.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress::TestData::IPv4:
     file: lib/Data/Semantic/Net/IPAddress/TestData/IPv4.pm
-    version: 1.100850
+    version: 1.101610
   Data::Semantic::Net::IPAddress::TestData::IPv6:
     file: lib/Data/Semantic/Net/IPAddress/TestData/IPv6.pm
-    version: 1.100850
+    version: 1.101610
 requires:
-  Carp: 0
   Data::Semantic: 0
   Data::Semantic::Test: 0
-  English: 0
-  File::Find: 0
-  File::Temp: 0
   Net::IP: 0
-  Scalar::Util: 0
-  Test::CompanionClasses: 0
-  Test::More: 0.88
+  Test::More: 0
   constant: 0
   parent: 0
   perl: 5.008
@@ -54,4 +56,4 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Data-Semantic-Net
   homepage: http://search.cpan.org/dist/Data-Semantic-Net/
   repository: http://github.com/hanekomu/Data-Semantic-Net
-version: 1.100850
+version: 1.101610
